--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
-    "APPNAME": "survey.alienbill.com",
-    "DATAROOT": "/home/kirkjerk/SITES/PROJECTS/DATA/survey.alienbill.com",
-    "APPROOT": "survey.alienbill.com"
+    "APPNAME": "display-name",
+    "DATAROOT": "/folder/to/store/files",
+    "APPROOT": "servername/path"
 }
